# CS4900

./: .gitignore
Quadratic/: Makefile  README  README.md  proposal.tex
Quadratic/Spikes/: Makefile  main.c
Quadratic/doc/: code_standards.txt  functional_testing.txt  git.txt  installation_and_maintenance.txt  proposal.tex  unit_testing.txt
Quadratic/src/: .gitignore  Makefile  README
Quadratic/test/: README.txt  expected_output_1.txt  expected_output_10.txt  expected_output_11.txt  expected_output_12.txt  expected_output_2.txt  expected_output_20.txt  expected_output_22.txt  expected_output_24.txt  expected_output_31.txt  expected_output_33.txt  expected_output_34.txt  expected_output_35.txt  expected_output_37.txt  expected_output_5.txt  expected_output_51.txt  expected_output_60.txt  expected_output_7.txt  expected_output_70.txt  expected_output_80.txt  functional_test_suite.sh  input_10.txt  input_20.txt  input_21.txt  input_23.txt  input_24.txt  input_25.txt  input_31.txt  input_32.txt  input_34.txt  input_35.txt  input_36.txt  input_5.txt  input_51.txt  input_70.txt  input_71.txt  input_80.txt
project/: DOCS.txt  README.md  installation.md  maintenance.md
project/docs/: BUILD.cmd  FaceMessage.idl  System_Testing_Documentation.txt  Unit_Testing_Documentation.txt  automation_standard  automation_standard.md  documentation.md  example.mpc  example.mwc  example_config.ini  example_dds_code.cpp  installation.md  maintenance.md  overview.md  system_testing.md  (+5 more)
project/src/Visual Processing Module/src/: CMakeLists.txt  ToolBox.h  main.cpp  shared.h
(+126 files in other folders)
